unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/bmpyrckt__Timeline_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configures the related records to plot on the timeline lwc.</description>
    <label>Timeline Configuration</label>
    <pluralLabel>Timeline Configurations</pluralLabel>
</CustomObject>