unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Detail_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Detail_Field__c</fullName>
    <inlineHelpText>The field to use to show against each record on the timeline lwc as a short description (30 chars shown)</inlineHelpText>
    <label>Detail Field</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>