unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Icon__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Icon__c</fullName>
    <inlineHelpText>The icon to use for this object type</inlineHelpText>
    <label>Icon</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>