unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Icon_Background_Colour_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Icon_Background_Colour_Field__c</fullName>
    <inlineHelpText>The background colour for the icon based on a formula field allowing different colours</inlineHelpText>
    <label>Icon Background Colour (Field)</label>
    <length>180</length>
    <type>Text</type>
</CustomField>