unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Icon_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Icon_Field__c</fullName>
    <inlineHelpText>The icon to use based on a formula field allowing you to dynamically select an icon</inlineHelpText>
    <label>Icon (Field)</label>
    <length>180</length>
    <type>Text</type>
</CustomField>