unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Position_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Position_Date_Field__c</fullName>
    <inlineHelpText>The date fields API name used to determine where on the timeline to plot the record</inlineHelpText>
    <label>Position Date Field</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>