unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Sequence__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Sequence__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>The order the object appears in the filter panel on the right hand side of the timeline</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>