unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Tooltip_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Tooltip_Id_Field__c</fullName>
    <description>The Id field to use when hovering over a record in the timeline. Used to support the ability to show a junction object record but show detail of the parent.</description>
    <inlineHelpText>If the UI API is supported but you want a related record shown specify the Id field to use when hovering here.</inlineHelpText>
    <label>Tooltip Id Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>