unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/fields/bmpyrckt__Type_Field__c.field-meta.xml
<CustomField>
    <fullName>bmpyrckt__Type_Field__c</fullName>
    <inlineHelpText>The field used for Task sObject type only</inlineHelpText>
    <label>Type Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>