unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/validationRules/bmpyrckt__No_External_Objects_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>bmpyrckt__No_External_Objects_Allowed</fullName>
    <active>true</active>
    <description>Timeline is not a good option for External Objects</description>
    <errorConditionFormula>IF ( CONTAINS( bmpyrckt__Object_Name__c, '__x'), true, false)</errorConditionFormula>
    <errorDisplayField>bmpyrckt__Object_Name__c</errorDisplayField>
    <errorMessage>External Objects cannot be used in the timeline. Timeline supports standard and custom objects only.</errorMessage>
</ValidationRule>