unpackaged/main/default/objects/bmpyrckt__Timeline_Configuration__mdt/listViews/bmpyrckt__Active_Configurations.listView-meta.xml
<ListView>
    <fullName>bmpyrckt__Active_Configurations</fullName>
    <columns>DeveloperName</columns>
    <columns>bmpyrckt__Parent_Object__c</columns>
    <columns>bmpyrckt__Object_Name__c</columns>
    <columns>bmpyrckt__Relationship_Name__c</columns>
    <columns>bmpyrckt__Position_Date_Field__c</columns>
    <columns>bmpyrckt__Detail_Field__c</columns>
    <columns>bmpyrckt__Icon__c</columns>
    <columns>bmpyrckt__Icon_Background_Colour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bmpyrckt__Test__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>bmpyrckt__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Configurations</label>
</ListView>